<resources>
    <string name="app_name">W6Sensory</string>
    <string name="light_string">czujnik światła: %1$.5f</string>
    <string name="proximity_string">czujnik zbliżeniowy: %1$.5f</string>
    <string name="accelerometer_string">akcelerometr\nX: %1$.3f, Y: %2$.3f, Z: %3$.3f</string>
    <string name="dostepne_sensory">Dostępne sensory:</string>
    <string name="czyszczenie_listy_sensorow">Czyszczenie listy sensorów</string>
    <string name="zaladowanie_sensorow">Załadowanie sensorów</string>
    <string name="napis_pusta_lista">Lista sensorów - \nprzycisk Załadowanie sensorów</string>
    <string name="pusta_linia">""</string>
    <string name="type_all">ALL</string>
    <string name="type_zblizeniowe">PROXI</string>
    <string name="type_swiatlo">LIGHT</string>
    <string name="type_acc">ACC</string>
</resources>