<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="sensory"
            type="tm.lab.w6sensory.Sensory" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="4dp"
        android:background="@color/kolor_tla"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/zaladowanieSensorowButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/zaladowanie_sensorow"/>

        <Button
            android:id="@+id/czysczenieListySensorowButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/czyszczenie_listy_sensorow"/>

        <TextView
            android:id="@+id/sensoryNapis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dostepne_sensory"
            style="@style/styl1"/>

        <RadioGroup
            android:id="@+id/typyRG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/allRB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/type_all"
                android:layout_marginLeft="2dp"
                android:background="@color/kolor_tla_kontrolki"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/proximityRB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/type_zblizeniowe"
                android:layout_marginLeft="2dp"
                android:background="@color/kolor_tla_kontrolki"/>

            <RadioButton
                android:id="@+id/lightRB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/type_swiatlo"
                android:layout_marginLeft="2dp"
                android:background="@color/kolor_tla_kontrolki"/>

            <RadioButton
                android:id="@+id/accRB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/type_acc"
                android:layout_marginLeft="2dp"
                android:background="@color/kolor_tla_kontrolki"/>

        </RadioGroup>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <TextView
                android:id="@+id/listaSensorow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/styl1"
                android:text="wiersz"/>

        </ScrollView>

        <TextView
            android:id="@+id/swiatloTekst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/styl1"
            android:text="@{String.format(@string/light_string, sensory.lightWartosc)}"/>

        <TextView
            android:id="@+id/zblizenieTekst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/styl1"
            android:text="@{String.format(@string/proximity_string, sensory.proximityWartosc)}"/>

        <TextView
            android:id="@+id/akcelerometrTekst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/styl1"
            android:text="@{String.format(@string/acc_string, sensory.accWartosc[0], sensory.accWartosc[1], sensory.accWartosc[2])}"/>




    </LinearLayout>
</layout>